--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip::after {
+  background-color: black;
+  border-radius: 8px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+  color: #FFF;
+  content: attr(data-tooltip);
+  bottom: -40px;
+  left: -10px;
+  opacity: 0;
+  padding: 3px;
+  position: absolute;
+  visibility: hidden;
+  font-size: 10px;
+  z-index: 1;
+  white-space: pre;
+}
+
+.tooltip:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
