--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   color: #FFF;
   content: attr(data-tooltip);
   bottom: -40px;
-  left: -10px;
+  left: 0;
   opacity: 0;
   padding: 3px;
   position: absolute;
